# rai-checklist-cli

./: .gitignore  .pypirc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  checklist_config.yaml  pyproject.toml  requirements.txt  setup.py  validate_checklist.py
.github/: FUNDING.yml
.github/workflows/: ai-responsibility-check.yml  model-deploy.yml  pypi-publish.yml
docs/: api.md  contributing.md  usage.md
examples/: checklist.json  checklist.yaml  responsible_ai_checklist_llm.md  test_checklist.md
notebooks/: Create_Custom_Checklist.ipynb  ai_checklist.ipynb
rai_checklist_cli/: checklist_generator.py  cli.py  colab_utils.py  config.py  jupyter_template_manager.py  template_manager.py  template_utils.py  templates.yaml
tests/: test.ipynb  test_cli.py  test_integration.py  test_notebook.ipynb
