[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rai_checklist_cli"
version = "0.5.9"
description = "Responsible AI Checklist CLI for LLM Projects"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML",
    "ipywidgets",
]

[project.scripts]
rai-checklist = "rai_checklist_cli.cli:main"

[tool.setuptools.packages.find]
include = ["rai_checklist_cli*"]

[tool.setuptools.package-data]
rai_checklist_cli = ["templates.yaml"]